# django_altair_express

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/django_altair_express/: __init__.py  apps.py
src/django_altair_express/templatetags/: __init__.py  altair_express.py
tests/: __init__.py  settings.py  test_tags.py
