[project]
name = "django-altair-express"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Xpt0xZv", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.2",
    "django>=6.0.6",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = "."
